# vivcord

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
vivcord/: __init__.py  _api.py  _constants.py  _gateway.py  _internal_types.py  _typed_dicts.py  _utils.py  client.py  commands.py  components.py  context.py  datatypes.py  errors.py  events.py  helpers.py  taskmanager.py  traits.py
vivcord/datatypes/: __init__.py  channel.py  embed.py  flags.py  guild.py  intents.py  message.py  not_implemented.py  permission.py  role.py  snowflake.py  user.py
