[tool.poetry]
name = "vivcord"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
loguru = "^0.5.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bugbear = "*"
pep8-naming = "*"
flake8-builtins = "*"
flake8-docstrings = "*"
darglint = "*"
flake8-isort = "*"
flake8-comprehensions = "*"
flake8-bandit = "*"
flake8-colors = "*"
flake8-eradicate = "*"
flake8-pytest-style = "*"
flake8-blind-except = "*"
flake8-black = "*"
flake8-broken-line = "*"
flake8-fixme = "*"
flake8-multiline-containers = "*"
flake8-pep3101 = "*"
flake8-simplify = "*"
flake8-variables-names = "*"
flake8-functions = "*"

# WARNING: does not work on: async for
flake8-expression-complexity = "*"

flake8-use-fstring = "*"
flake8-length = "*"
dlint = "*"
flake8-annotations-complexity = "*"
flake8-type-checking = "*"

black = "*"
isort = "*"
taskipy = "*"
pyright = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pyright]
# turn on EVERYTHING
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportCallInDefaultInitializer = "error"
reportImplicitStringConcatenation = "error"
reportUnusedCallResult = "error"
reportImportCycles = "none"

[tool.taskipy.tasks]
lint = { cmd = "flake8 .; pyright", help = "Lints project" }
pyright = { cmd = "pyright", help = "Checks the types in the project" }
format = { cmd = "isort .; black .", help = "Runs the black python formatter" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
